1. Fixed problem of jumping to in-page anchors ending up putting the heading text under the nav bar.
2. Moved the body margin settings to in here.

3. Style the headings in the table of contents better.  This is combination with some changes to the Makefile, to set a class attribute on the headline elements.

--- a/src/handbook-css/handbook.css
+++ b/src/handbook-css/handbook.css
@@ -1,3 +1,8 @@
+body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+
 .main-toc ul
 {
     list-style-type: none;
@@ -8,12 +13,34 @@
     display: none;
 }
 
+/* This is needed to make jumping to in-page anchors from the nav bar work
+as expected.  Without this, the heading text appears underneath the nav bar. */
+
+h2, h3, h4 {
+    padding-top: 60px;
+    margin-top: -60px;
+}
+
 .dropdown-menu li a {
     line-height: 1.2;
 }
 
-.section-number {
+span.section-number {
     margin-right: 1ex;
+}
+
+span.header-section-number {
+    margin-right: 1ex;
+}
+
+li.headline {
+    font-weight: bold;
+    font-size: larger;
+}
+
+.main-toc li:not(.headline),
+.navbar-nav li:not(.headline) {
+    margin-left: 25px;
 }
 
 .references {
@@ -30,4 +57,11 @@
     font-size: 30px;
     margin-top: 1em;
     padding-top: 1em;
+}
+
+/* Bootstrap's styling of <p> adds a 10px margin below, but it doesn't
+   define it for <center>.  This seems useful to make things more consistent.
+*/
+center {
+    margin-bottom: 10px;
 }
